# motion-amp-pro

./: .gitignore  BITACORA.md  README.md  list_cameras.py  pyproject.toml
docs/: index.html  style.css
docs/plans/: 2026-02-04-motion-magnification.md
src/motion_amp/: algorithm.md  engine.py  main.py  pipeline.py
tests/: test_engine.py
