[project]
name = "motion-amp-pro"
version = "0.1.0"
description = "Real-time Eulerian Motion Magnification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0",
    "numpy>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.90.0",
]
